--- a/VodenicharskaM_FinalProject_2023/App.xaml
+++ b/VodenicharskaM_FinalProject_2023/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:VodenicharskaM_FinalProject_2023"
-             StartupUri="Calendar.xaml">
+             StartupUri="SignUp.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
